fix:text areas when typing overlappping icons

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ h4{
     font-weight: 600;
 }
 
+input{
+    padding: 0 20px;
+}
+
 /* CONTAINERS AND DIMENSIONS */
 /* layout */
 .webapp{
@@ -108,7 +112,7 @@ header{
 #search{
     width: 100%;
     border: hidden;
-    padding: 5px;
+    padding: 5px 35px;
 }
 .search-contact span{
     color: var(--iconsgrey);
